# Memori-paepp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: core-ci.yml  publish-npm.yml  publish.yml
benchmarks/perf/: test_hosted_recall_benchmarks.py
core/: Cargo.toml  README.md
core/.cargo/: config.toml
core/bindings/node/: Cargo.toml  package.json
core/bindings/node/src/: lib.rs
core/bindings/python/: Cargo.toml
core/src/: lib.rs
core/src/augmentation/: mod.rs  pipeline.rs
core/src/embeddings/: mod.rs  models.rs
core/src/retrieval/: pipeline.rs
core/src/runtime/: worker.rs
core/src/storage/: bridge.rs
core/tests/: retrieval_aa_contract.rs
docs/memori-cloud/benchmark/: overview.mdx  results.mdx
docs/memori-cloud/openclaw/: agent-skills.md
examples/sqlite/: rust_core_main.py
integrations/openclaw/: package-lock.json  package.json
integrations/openclaw/src/: sanitizer.ts
integrations/openclaw/tests/: index.test.ts  sanitizer.test.ts
memori/: __init__.py  _config.py  _exceptions.py  _network.py  _rust_core.py
memori-ts/: README.md  package-lock.json  package.json
memori-ts/src/: memori.ts
memori-ts/src/engines/: augmentation.ts
memori-ts/src/integrations/: base.ts  index.ts  openclaw.ts
memori/llm/: _base.py  _constants.py  _providers.py  _registry.py  _utils.py
memori/memory/: _manager.py  recall.py
tests/: test_config.py  test_init.py  test_network.py  test_rust_core.py
tests/llm/: test_llm_base.py  test_llm_clients.py
tests/storage/: test_storage_registry.py
(+20 files in other folders)
