[package]
name = "node-bindings"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-orchestrator = { path = "../.." }
napi = { workspace = true, features = ["napi4"] }
napi-derive.workspace = true
serde_json = "1"

[build-dependencies]
napi-build.workspace = true
